# GSDJX4DoubleSysFserv

./: .gitignore  ANDROID_IOS_BLE_CONSISTENCY_REPORT.md  ANDROID_IOS_BLE_DETAILED_ANALYSIS.md  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  BITMAP_PROCESSING_GUIDE.md  BLE_BEST_PRACTICES.md  BLE_BMP_TRANSFER_FIX.md  BLE_CONSISTENCY_CONCLUSION.md  BLE_DEBUG_GUIDE.md  BLE_INTEGRATION_GUIDE.md  BLE_PROTOCOL_SYNC.md  BLE_RECONNECTION_FIX.md  BLE_RECONNECTION_QUICK_FIX.md  COMPLETION_REPORT.md  DEPLOYMENT_AND_TESTING.md  ESP32_EXECUTION_CAPABILITY.md  ESP32_QUICK_CHECK.md  FINAL_REPORT.md  GECKOVIEW_API_RESEARCH_SUMMARY.md  GECKOVIEW_NETWORK_INTERCEPT_API.md  GECKOVIEW_QUICK_REFERENCE.md  GSDJX4DoubleSysFserv.code-workspace  GSDJX4DoubleSysFserv.csproj  GSDJX4DoubleSysFserv.sln  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  IOS_BACKGROUND_TASK_ANALYSIS.md  MODEL_DOWNLOAD_GUIDE.md  MODEL_VERIFICATION_SUMMARY.md  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  NetworkInterceptorExample.kt  ONNX_OCR_README.md  PROTOCOL_COMPARISON.md  PROTOCOL_FIX_SUMMARY.md  PROTOCOL_QUICK_REFERENCE.md  (+16 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
BlePer/: README.md  ble_peripheral.py  go.mod  http_image_server.py  main.go  main.py  pyproject.toml
Resources/Styles/: Colors.xaml
Services/: BleService.Android.cs  BleService.cs  BleService.iOS.cs  IStorageService.cs  ShinyBleDelegate.cs  ShinyBleService.cs  WeReadService.cs  X4IMProtocol.cs
Views/: BleDevicesPage.xaml  BleDevicesPage.xaml.cs  EPDReadingPage.xaml  EPDReadingPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  WeReadPage.xaml  WeReadPage.xaml.cs
app/: build.gradle.kts
app/src/androidTest/java/com/example/gsdjx4doublesysfserv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: ch_ppocr_mobile_v2.0_cls_slim_opt.nb
app/src/main/cpp/: CMakeLists.txt  rec_native.cpp  rec_native.h
app/src/main/cpp/ocr/: ocr_native.cpp  ocr_native.h
app/src/main/java/com/guaishoudejia/x4doublesysfserv/: BleCommandReceiver.kt  BleConnectionManager.kt  BleEspClient.kt  BleEspClientOptimized.kt  CommandService.kt  CommandServiceManager.kt  DeviceScanActivity.kt  EInkAccessibilityService.kt  EpubPageRenderer.kt  FrameSyncState.kt  GeckoActivity.kt  GeckoFloatingWindowService.kt  GeckoForegroundService.kt  GeckoForegroundServiceExample.kt  GeckoForegroundServiceIntegration.kt  GeckoForegroundServiceManager.kt  GeckoOcrIntegrationManager.kt  GeckoRuntimeManager.kt  HeadlessRenderService.kt  MainActivity.kt  OcrTextDisplayPanel.kt  X4Service.kt  (+7 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/: BITMAP_SIZE_FIX.md  BLE_DATA_TRANSFER_FIX.md  BLE_DEVICE_MANAGER.md  BLE_PROTOCOL_SYNC.md  BLE_QUICK_REFERENCE.md  BLE_TRANSFER_FINAL_FIX.md  EBOOK_BLE_INTEGRATION.md  IMPLEMENTATION_SUMMARY_BLE.md  NEXT_STEPS.md  PADDLEOCR_FINAL_STATUS.md  PADDLEOCR_INTEGRATION_REPORT.md  PADDLEOCR_QUICK_START.md  PADDLEOCR_SETUP.md  PADDLEOCR_STATUS.md  PADDLEOCR_USAGE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_REFERENCE_EBOOK.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
